--- a/index.html
+++ b/index.html
@@ -26,19 +26,29 @@
         <div id="backimg01" class="backimg"><img src="./images/P1260400.jpg" alt=""></div>
         <div id="backimg02" class="backimg"><img src="./images/back02.jpg" alt=""></div>
         <div id="backimg03" class="backimg"><img src="./images/back03.jpg" alt=""></div>
-        <div id="backimg04" class="backimg"><img src="./images/IMG_4572.jpg" alt=""></div>
+        <div id="backimg04" class="backimg"><img src="./images/IMG_3433 3.JPG" alt=""></div>
+        <div id="backimg05" class="backimg"><img src="./images/IMG_4572.jpg" alt=""></div>
       </div>
 
       <ul id="menu">
         <li id="btn01">MENU1</li>
         <li id="btn02">MENU2</li>
         <li id="btn03">MENU3</li>
-        <li id="btn01">MENU4</li>
-        <li id="btn01">MENU5</li>
-        <li id="btn01">MENU6</li>
+        <li id="btn04">MENU4</li>
+        <li id="btn05">MENU5</li>
+        <li id="btn06">MENU6</li>
       </ul>
 
       <div id="content">
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
         <div class="set"></div>
         <div class="set"></div>
         <div class="set"></div>
