--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<div class="content">
+	<div class="inner">
+		<div class="full">ここは画面幅いっぱい</div>
+		<div class="body">ここはインナー幅の中</div>
+	</div>
+</div>
 
 <!doctype html>
 <html lang="ja">
@@ -39,7 +45,8 @@
 <script src="imagesloaded.pkgd.min.js"></script>
 <script src="masonry.pkgd.min.js"></script>
 
-<title>サンプル3</title>
+
+<title>S</title>
 <link href="js/slick-theme.css" rel="stylesheet" type="text/css">
 <link href="js/slick.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
