--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<div class="content">
-	<div class="inner">
-		<div class="full">ここは画面幅いっぱい</div>
-		<div class="body">ここはインナー幅の中</div>
-	</div>
-</div>
-
 <!doctype html>
 <html lang="ja">
 <head>
@@ -97,6 +90,11 @@
 </div>
 <footer class="site-footer">
     <p class="copyright">@2021 SAKURAI</p>
+  
+    <div class="content">
+      <div class="inner">
+        <div class="full">image01</div>
+        <div class="body">ここはインナー幅の中</div>
+      </div>
+    </div>
 
-    
-    
