--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   
     <div class="content">
       <div class="inner">
-        <div class="full">image01</div>
-        <div class="body">ここはインナー幅の中</div>
+        <div class="full">できないできないできないできないできないできない</div>
+        <div class="body">難しすぎる難しすぎる</div>
       </div>
     </div>
 
