--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="content">
       <div class="inner">
         <div class="full">できないできないできないできないできないできない</div>
-        <div class="body">難しすぎる難しすぎる</div>
+        <div class="body">難しすぎる難しすぎるむずいむずいむずいむずい</div>
       </div>
     </div>
 
