--- a/index.html
+++ b/index.html
@@ -88,13 +88,17 @@
 <div class="content">
     <!--省略-->
 </div>
+<p id="sample">DAZN</p>
+
+<div class="content">
+  <div class="inner">
+    <div class="full">できないできないできないできないできないできない</div>
+    <div class="body">難しすぎる難しすぎるむずいむずいむずいむずい</div>
+  </div>
+</div>
+
 <footer class="site-footer">
     <p class="copyright">@2021 SAKURAI</p>
   
-    <div class="content">
-      <div class="inner">
-        <div class="full">できないできないできないできないできないできない</div>
-        <div class="body">難しすぎる難しすぎるむずいむずいむずいむずい</div>
-      </div>
-    </div>
-
+    
+    
